# oglapp

./: .gitmodules  CMakeLists.txt  README.md
resources/shaders/: fragment.frag
src/: Engine.cpp  Engine.h  main.cpp
src/common/: Camera.cpp  Camera.h  CameraOperator.cpp  CameraOperator.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  ShaderManager.cpp  ShaderManager.h
src/rendering/: Mesh.cpp  Mesh.h  Object.cpp  Object.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Vertex.h
